Skip CallDeferredErrorCallbacks if no deferred error

In current Deferred Error Callback implementation, CallDeferredErrorCallbacks
will be invoked in every GPU_CLIENT_SINGLE_THREAD_CHECK().

Current implementation of CallDeferredErrorCallbacks will do extra deque created
and swap operation even there is no errors. This impact performance.

This patch fixed this by adding a flag and skip CallDeferredErrorCallbacks if there are no errors.

Bug: 862069
Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;luci.chromium.try:linux_optional_gpu_tests_rel;luci.chromium.try:mac_optional_gpu_tests_rel;luci.chromium.try:win_optional_gpu_tests_rel
Change-Id: Ie64aca137ac20bd7a19895a9dafed2a1744348ae
Reviewed-on: https://chromium-review.googlesource.com/1131010
Reviewed-by: Antoine Labour <piman@chromium.org>
Reviewed-by: Kenneth Russell <kbr@chromium.org>
Commit-Queue: Shaobo Yan <shaobo.yan@intel.com>
Cr-Commit-Position: refs/heads/master@{#575527}
Former-commit-id: 5c73a1ae6198d997a909387d8ab55b6a6e5c18a0